--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,9 @@
   functions = "netlify/functions"
 
 [[redirects]]
-  from   = "/"
-  to     = "/index.html"
+  from = "/"
+  to   = "/index.html"
   status = 200
+
+[[plugins]]
+  package = "@netlify/plugin-functions-install-core"
